<refactor> переделал сво-ва на yaml
Signed-off-by: Arthur Inzhilov <artur-inzhilov@mail.ru>